<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softBlue"
    tools:context=".profile">

    <Button
        android:id="@+id/backButton3"
        android:layout_width="54dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/transparent"
        android:drawableEnd="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inria_serif_bold"
        android:text="@string/profile"
        android:textColor="@color/NavyBlue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myFav"
        app:srcCompat="@drawable/my_profile" />

    <Button
        android:id="@+id/cambtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="116dp"
        android:backgroundTint="@android:color/transparent"
        android:drawableEnd="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myFav"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view2"
        android:layout_width="409dp"
        android:layout_height="256dp"
        android:layout_marginTop="50dp"
        android:background="@color/babyPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inria_serif_regular"
        android:text="@string/profile_name"
        android:textColor="@color/ash"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/inria_serif_regular"
        android:text="@string/profile_addName"
        android:textColor="@color/NavyBlue"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inria_serif_regular"
        android:text="@string/profile_email"
        android:textColor="@color/ash"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inria_serif_regular"
        android:text="@string/profile_addEmail"
        android:textColor="@color/NavyBlue"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/inria_serif_bold"
        android:text="@string/salutation"
        android:textColor="@color/NavyBlue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inria_serif_regular"
        android:text="@string/profile_phone"
        android:textColor="@color/ash"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inria_serif_regular"
        android:text="@string/profile_addPhone"
        android:textColor="@color/NavyBlue"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inria_serif_regular"
        android:text="@string/profile_location"
        android:textColor="@color/ash"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inria_serif_regular"
        android:text="@string/profile_addLocation"
        android:textColor="@color/NavyBlue"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inria_serif_regular"
        android:text="@string/profile_username"
        android:textColor="@color/ash"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inria_serif_regular"
        android:text="@string/profile_addUname"
        android:textColor="@color/NavyBlue"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inria_serif_regular"
        android:text="@string/profile_password"
        android:textColor="@color/ash"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inria_serif_regular"
        android:text="@string/profile_addPasswo"
        android:textColor="@color/NavyBlue"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/edtBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/babyBlue"
        android:fontFamily="@font/inria_serif_bold"
        android:text="@string/edtBtn"
        android:textColor="@color/NavyBlue"
        android:textSize="20sp"
        app:backgroundTint="@color/babyBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:ignore="MissingConstraints" />



    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="640dp"
            android:layout_above="@id/bottom_navigation"
            android:layout_alignParentTop="true"
            android:layout_marginTop="11dp" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            app:itemIconTint="@color/purple"
            app:itemTextColor="@color/ash"
            app:menu="@menu/bottom_nav_menu" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>